--- a/client/src/app/dashboard/dashboard.component.scss
+++ b/client/src/app/dashboard/dashboard.component.scss
@@ -1,9 +1,10 @@
-.words-container {
+.container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
 
-
-
+.input {
+  border: none
 }
