extracted logic to the services and divided the template in components

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,2 @@
-<div class="container">
-  <div *ngFor="let word of words">{{word}}</div>
-
-</div>
-<div class="container">
-  <p>{{typed}}</p>
-
-</div>
-
-<div class="container">
-
-  <input #box class="input" type="text" (keyup.space)="spaceHandler(); box.value = ''"
-    (keyup)="inputHandler(box.value)">
-</div>
+<app-words-display></app-words-display>
+<app-controls></app-controls>
